--- a/prototypes/03_zoom-with-buttons.html
+++ b/prototypes/03_zoom-with-buttons.html
@@ -17,8 +17,9 @@
         gap: inherit;
     }
     .mysupergrid section div {
-        height: var(--grid-size);
-        width: var(--grid-size);
+        display: grid;
+        height: calc(var(--grid-size) * 1px);
+        width: calc(var(--grid-size) * 1px);
         background-color: green;
         box-shadow: inset 0 0 0 1px black;
     }
@@ -26,8 +27,10 @@
     .mysupergrid section .right-slab,
     .mysupergrid section .up-slab,
     .mysupergrid section .down-slab {
-        position: absolute;
+        position: relative;
         background-color: unset;
+        grid-row-start: 1;
+        grid-column-start: 1;
     }
 
     .mysupergrid section .left-slab::before,
@@ -64,16 +67,16 @@
 <body>
     <div class="mysupergrid">
         <button onclick="
-            var r = document.querySelector(':root');
-            var size = Number(r.style.getPropertyValue('--grid-size'));
+            var style = document.querySelector(':root').style;
+            var size = Number(style.getPropertyValue('--grid-size'));
             if (size === 0) size = 30;
-            if (size < 199) r.style.setProperty('--grid-size', size + 5);
+            if (size < 199) style.setProperty('--grid-size', size + 5);
             ">+</button>
         <button onclick="
-            var r = document.querySelector(':root');
-            var size = Number(r.style.getPropertyValue('--grid-size'));
+            var style = document.querySelector(':root').style;
+            var size = Number(style.getPropertyValue('--grid-size'));
             if (size === 0) size = 30;
-            if (size > 6) r.style.setProperty('--grid-size', size - 5);
+            if (size > 6) style.setProperty('--grid-size', size - 5);
             ">-</button>
         <span>
             <section><div><div class="left-slab"></div></div><div></div><div></div><div></div><div></div><div></div></section>
